...
        let tabBarVC = CommonTabBar()
        tabBarVC.items = [
            CommonTabBarItemModel(
                vc: HomeViewController(),
                image: UIImage(named: "uikit"),
                selectedImage: UIImage(named: "uikit_selected"),
                title: "UIKit"
            ),
            CommonTabBarItemModel(
                vc: SeniorViewController(),
                image: UIImage(named: "senior"),
                selectedImage: UIImage(named: "senior_selected"),
                title: "Senior"
            ),
            CommonTabBarItemModel(
                vc: StyleViewController(),
                image: UIImage(named: "style"),
                selectedImage: UIImage(named: "style_selected"),
                title: "Style"
...
