...
extension CommonTabBar: UITabBarControllerDelegate {
    // no op
}

extension CommonTabBar {
    enum Accessibility {
        static let identifier = "CommonTabBar"
    }
}

